--- a/src/assets/containers/Button.css
+++ b/src/assets/containers/Button.css
@@ -3,7 +3,7 @@
     font-weight: bold;
     font-size: 2rem;
     padding: 1rem;
-    color: black;
+    color: rgb(68, 68, 68);
     background-color: rgb(0, 255, 255);;
     border: none;
     border-radius: 10px;
